--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,12 @@
 twig:
-    default_path: '%kernel.project_dir%/templates'
+  default_path: "%kernel.project_dir%/templates"
+  globals:
+    cart: '@App\Service\Cart\Cart'
+    paypalCheckout: '@App\Service\Checkout\PaypalCheckout'
+  paths:
+  # point this wherever your css files live
+  "%kernel.project_dir%/public/assets/css": styles
 
 when@test:
-    twig:
-        strict_variables: true
+  twig:
+    strict_variables: true
