--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,12 +1,6 @@
 twig:
-  default_path: "%kernel.project_dir%/templates"
-  globals:
-    cart: '@App\Service\Cart\Cart'
-    paypalCheckout: '@App\Service\Checkout\PaypalCheckout'
-  paths:
-  # point this wherever your css files live
-  "%kernel.project_dir%/public/assets/css": styles
+    default_path: '%kernel.project_dir%/templates'
 
 when@test:
-  twig:
-    strict_variables: true
+    twig:
+        strict_variables: true
