--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,10 @@ security:
         path: app_logout
         # where to redirect after logout
         # target: app_any_route
+      remember_me:
+        secret: "%kernel.secret%"
+        # We set the lifetime to one week in seconds.
+        lifetime: 604800
 
       # activate different ways to authenticate
       # https://symfony.com/doc/current/security.html#the-firewall
