start implementation of role hierarchy with a ROLE_SUPER_ADMIN

--- a/.env
+++ b/.env
@@ -36,5 +36,15 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> Stripe API ###
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
+###< Stripe API ###
+
+###> Paypal API ###
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+###< Paypal API ###
