--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,7 +2,7 @@ twig:
   default_path: "%kernel.project_dir%/templates"
   globals:
     cart: '@App\Service\Cart\Cart'
-    paypalCheckout: '@App\Service\Checkout\PaypalCheckout'
+    payPalApi: '@App\Service\Api\PayPalApi'
   paths:
     # point this wherever your css files live
     "%kernel.project_dir%/public/assets/css": styles
